# pi-app

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  README.ru.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.claude/: launch.json
.github/: pull_request_template.md
.pi/: verifiers.json
bench/: README.md  advanced-tasks.mjs  analyze.mjs  blind-review.mjs  compaction-smoke.mjs  evaluator-replay.ts  extension-surface-probe.mjs  fixture-git-smoke.mjs  fixture-git.mjs  import-human-review.mjs  live-preview-browser-smoke.mjs  long-tasks.mjs  macos-sandbox-smoke.mjs  macos-sandbox.mjs  model-judge-replay.mjs  recover.mjs  regrade-report.mjs  resume-workflow.mjs  rewind-smoke.mjs  router-scenarios.d.mts  router-scenarios.mjs  run.mjs  runtime-command-smoke.mjs  schedule-smoke.mjs  schedule.mjs  skill-resource-smoke.mjs  skill-resource.mjs  task-controls-smoke.mjs  task-verifiers.mjs  tasks.mjs  verify-final.mjs  verify-readiness.mjs  workflow-recovery.mjs  workflow-resume-smoke.mjs  workflow-router-bench.mjs  workflow-router-runtime-smoke.mjs  workflow-workspace-scope-smoke.mjs
docs/: AGENT-ENV.md  EXTENSION-LIFECYCLE.md  HARNESS-CODEX-CLAUDE-UX-AUDIT-2026-07-24.md  HARNESS-EXTENSIONS-AUDIT-2026-07-13.md  HARNESS-EXTENSIONS-AUDIT-2026-07-23.md  HARNESS-FINAL-READINESS-AUDIT-2026-07-20.md  HARNESS-GAP-AUDIT-RU-2026-07-18.md  HARNESS-QUALITY-AUDIT-2026-07-23.md  HARNESS-REDESIGN-2026-07-18.md  ROADMAP.md  SKILLS-AUDIT.md
extension-overlays/: pi-subagents-worktree.json
harness-extension/: auto-name.ts  index.ts  package.json  policy.ts  semantic-router-policy.ts  (+5 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_icon.rs  app_update.rs  avatars.rs  config.rs  editor.rs  extension_lifecycle.rs  gitops.rs  jsonl.rs  lib.rs  main.rs  packages.rs  perf.rs  pi_cli.rs  preview.rs  resources.rs  sessions.rs  skills.rs  supervisor.rs  text.rs  themes.rs  watcher.rs
src-tauri/tests/: agent_e2e.rs
(+70 files in other folders)
