[package]
name = "pi-app"
version = "0.1.0"
description = "Native macOS GUI for the pi coding agent"
edition = "2021"

[lib]
name = "pi_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "rt-multi-thread", "macros"] }
dirs = "6"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
notify = "8"

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
