[package]
name = "pi-app"
version = "0.1.0"
description = "Native macOS GUI for the pi coding agent"
edition = "2021"

[lib]
name = "pi_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "rt-multi-thread", "macros"] }
dirs = "6"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
notify = "8"
libc = "0.2"
base64 = "0.22"
glob = "0.3"
ignore = "0.4"
serde_yaml = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSApplication", "NSImage", "NSWorkspace"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSData"] }

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
